# meet-translator

./: AUDIO_MIXER_ROADMAP.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: BIDIRECTIONAL_ROADMAP.md  DEBUG_QUICKREF.md  bidirectional_design_decisions.md  bidirectional_quickstart.md  bidirectional_state_management.md  bidirectional_translation_guide.md  debug_guide.md  installation_guide.md  installation_guide_vi.md  tts_guide.md  tts_guide_vi.md
scripts/: local_pipeline.py  setup_mlx.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/audio/: inject_player.rs  macos_mic.rs  microphone.rs  mod.rs  tts_player.rs
src-tauri/src/audio/mixer/: ducking_engine.rs  loudness_analyzer.rs  mod.rs  smart_mixer.rs  vad_processor.rs
src-tauri/src/commands/: audio.rs  elevenlabs.rs  local_pipeline.rs  mixer.rs  mod.rs  setup.rs  tts_player.rs
src/js/: app.js  audio-player.js  edge-tts.js  elevenlabs-tts.js  google-tts.js  settings.js  soniox.js  ui.js  updater.js
src/styles/: main.css
