[package]
name = "my-translator"
version = "0.6.0"
description = "Personal Real-time Speech Translator"
authors = ["phucnt"]
edition = "2021"

[lib]
name = "personal_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
cpal = "0.15"
rodio = { version = "0.20", features = ["mp3"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
http = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Audio Mixer & Analysis
ebur128 = "0.1"  # LUFS loudness measurement (EBU R128 standard)
ringbuf = "0.3"  # Threadsafe circular buffer for audio

# macOS: ScreenCaptureKit for system audio + CoreAudio for AEC mic
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
screencapturekit = "1.5"
coreaudio-sys = { version = "0.2", features = ["audio_unit", "audio_toolbox"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }  # ONNX Runtime for VAD

# Windows: WASAPI for system audio
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_Foundation",
] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
